--- a/app/src/panng-test/sift-test/CMakeLists.txt
+++ b/app/src/panng-test/sift-test/CMakeLists.txt
@@ -1,5 +1,4 @@
-add_executable(sift-panng-test "sift-panng-test.cpp"
-        sift-panng-test.cpp)
+add_executable(sift-panng-test "sift-panng-test.cpp")
 
 
 find_package(OpenMP)
