--- a/app/src/qg-test/CMakeLists.txt
+++ b/app/src/qg-test/CMakeLists.txt
@@ -3,3 +3,5 @@ add_subdirectory(siftsmall-test)
 add_subdirectory(gist-test)
 add_subdirectory(enron-test)
 add_subdirectory(trevi-test)
+add_subdirectory(glove-200-angular-test)
+add_subdirectory(nytimes-256-angular-test)
