dbp test result

--- a/app/src/panng-test/CMakeLists.txt
+++ b/app/src/panng-test/CMakeLists.txt
@@ -5,3 +5,4 @@ add_subdirectory(enron-test)
 add_subdirectory(trevi-test)
 add_subdirectory(glove-200-angular-test)
 add_subdirectory(nytimes-256-angular-test)
+add_subdirectory(dbpedia-entities-efficient-splade-100k-test)
